Theme/ElegantFin-theme-nightly.css
/* ... */
.layout-mobile .backdropCard .itemProgressBar:not(.backgroundProgress, .playbackProgress, .transcodingProgress),
.layout-mobile .portraitCard .itemProgressBar:not(.backgroundProgress, .playbackProgress, .transcodingProgress) {
    width: 100%;
    width: -webkit-fill-available;
}

.itemProgressBarForeground {
    border-radius: 0 var(--largeRadius) var(--largeRadius) 0;
    background-color: light-dark(var(--zeroContrastColor), var(--textColor));
    opacity: 0.75;
}

.backgroundProgress > div,
.backgroundProgress {
    background-color: var(--darkerGradientPoint);
}

.playbackProgress > div {
    background-color: var(--accentColor);
}

::-moz-progress-bar {
    background: var(--accentColor) !important;
    border-radius: var(--smallRadius) inherit var(--smallRadius) 0;
}

::-webkit-progress-value {
    background: var(--accentColor) !important;
    border-radius: var(--smallRadius) inherit var(--smallRadius) 0;
}

progress,
::-webkit-progress-bar {
    background: var(--darkerGradientPoint) !important;
    border: var(--defaultBorder) !important;
    border-radius: var(--smallRadius);
    overflow: hidden;
}

progress + span {
    color: var(--accentColor) !important;
}

.mdl-spinner__circle {
    border-color: var(--textColor);
    border-style: inset;
    border-width: 0.25em;
}

.mdl-slider-container {
    height: 1em;
}

.mdl-slider {
    height: unset;
}

.mdl-slider-background-flex-container {
    padding: 0;
}

/* this is the osd player slider */
.mdl-slider-background-flex {
    border-radius: var(--smallRadius);
    height: 0.4em;
    margin-top: -0.2em;
    background: var(--osdSeekBarBufferedColorAlpha);
    transition: 0.2s linear;
}

.sliderContainer:active .mdl-slider-background-flex {
    height: 0.6em;
    margin-top: -0.3em;
}

.mdl-slider-background-lower {
    background-color: var(--osdSeekBarPlayedColor);
}

.mdl-slider-background-upper {
    background-color: var(--osdSeekBarBufferedColorAlpha);
}

.mdl-slider::-webkit-slider-thumb {
    background: var(--osdSeekBarThumbColor);
    width: 0.4em !important;
    height: 0.4em !important;
    border-radius: 0.4em;
}

.sliderContainer:hover .mdl-slider::-webkit-slider-thumb {
    width: 0.2em !important;
    height: 0.8em !important;
    border-radius: 0.2em;
    transform: scale(1);
}

.sliderContainer:active .mdl-slider::-webkit-slider-thumb,
.mdl-slider.show-focus:focus::-webkit-slider-thumb {
    width: 0.2em !important;
    height: 0.8em !important;
    border-radius: 0.2em;
    transform: scale(1) scaleY(1.25);
}

/* These Firefox thumb styles are separate because combining them breaks the effect from chrome */
.mdl-slider::-moz-range-thumb {
    background: var(--osdSeekBarThumbColor);
    width: 0.4em !important;
    height: 0.4em !important;
    border-radius: 0.4em;
}

.sliderContainer:hover .mdl-slider::-moz-range-thumb {
    width: 0.2em !important;
    height: 0.8em !important;
    border-radius: 0.2em;
    transform: scale(1);
}

.sliderContainer:active .mdl-slider::-moz-range-thumb,
.mdl-slider.show-focus:focus::-moz-range-thumb {
    width: 0.2em !important;
    height: 0.8em !important;
    border-radius: 0.2em;
    transform: scale(1) scaleY(1.25);
}

.sliderMarkerContainer {
    margin: 0 0.1em;
}

.sliderMarker.watched {
    background-color: var(--osdSeekBarPlayedColor);
}

.sliderMarker {
    height: 4px;
    border-radius: 2px;
}

.iconOsdProgressInner {
    background: var(--osdSeekBarPlayedColor);
}

.selectLabel {
    max-height: 2em;
    color: var(--textColor);
}

.inputLabelUnfocused {
    color: var(--textColor);
}

.inputLabelFocused {
    color: var(--fullContrastColor);
}

.button-link {
    color: var(--dimTextColor);
}

.button-link:hover {
    color: unset !important;
    text-decoration: none;
}

.button-link:active {
    color: var(--fullContrastColor) !important;
    text-decoration: none;
}

.mainDrawer,
.drawer-open {
    background-color: var(--drawerColor);
    border-right: var(--defaultBorder);
    backdrop-filter: var(--blurLarge);
}

.mainDrawer-scrollContainer {
    padding-bottom: 5vh;
}

.mainDrawer-scrollContainer > div:first-child {
    margin-bottom: 1em;
}

.btnHeaderSave.button-flat {
    color: var(--accentColor) !important;
    gap: 0.3em;
    border-radius: var(--smallRadius);
}

.button-flat:hover {
    color: unset;
}

.button-flat:active {
    color: unset;
    background-color: rgba(255, 255, 255, 0.2);
}

.playstatebutton-icon-played {
    color: rgb(34, 197, 94);
}

.videoOsdBottom.videoOsdBottom-maincontrols .btnPause {
    font-size: 2em;
}

.osdControls {
    display: flex;
    flex-direction: column-reverse;
}

.itemExternalLinks {
    color: transparent;
}

.itemExternalLinks > .button-link {
    color: var(--textColor);
    background-color: var(--selectorBackgroundColor);
    padding: 0.125em 0.5em;
    border-radius: var(--smallerRadius);
    margin-bottom: 0.5em;
}

.layout-mobile .itemExternalLinks > .button-link:hover:not(:active) {
    color: var(--textColor) !important;
}

.layout-desktop .itemExternalLinks > a:hover,
.itemExternalLinks > a:active {
    background-color: var(--accentColor) !important;
    color: white !important;
}

.layout-desktop .itemExternalLinks > a[href*="themoviedb.org"]:hover,
.itemExternalLinks > a[href*="themoviedb.org"]:active {
    background-color: rgb(26, 183, 216) !important;
    color: black !important;
}

.layout-desktop .itemExternalLinks > a[href*="imdb.com"]:hover,
.itemExternalLinks > a[href*="imdb.com"]:active {
    background-color: rgb(226, 182, 22) !important;
    color: black !important;
}

.layout-desktop .itemExternalLinks > a[href*="thetvdb.com"]:hover,
.itemExternalLinks > a[href*="thetvdb.com"]:active {
    background-color: rgb(108, 213, 145) !important;
    color: black !important;
}

.layout-desktop .itemExternalLinks > a[href*="trakt.tv"]:hover,
.itemExternalLinks > a[href*="trakt.tv"]:active {
    background-color: rgb(171, 58, 173) !important;
    color: white !important;
}
/* ... */

